# serial-logger

./: .gitmodules  CMakeLists.txt  build.bat  build.sh
src/: logger.c  logger.h  main.c  main.cpp
